# rdblearn

./: .coverage  .gitignore  README.md  SKILLS_INSTALL.md  __init__.py  core.py  evaluation.py  feature_engineer.py  package_design.md  pyproject.toml  utils.py
.claude/skills/experiment-recording/: SKILL.md  experiment_recorder.py  sheets_client.py  wandb_client.py
.claude/skills/update-main-baseline/: SKILL.md
.github/workflows/: ci.yaml.bak  publish.yml
_archive/config/model/: ag_default.json  limix_default.json  mlp_default.json  tabpfn_v2.5_regression_default.json  tabpfn_v2_regression_default.json
_archive/examples/: fit_example_mocked.py  predict_from_saved.py
_archive/multitabfm/: evaluation.py  feature_engineer.py
_archive/scripts/: test_tabpfn25.py
_archive/tests/: test_model.py
config/: sweep_config.yaml
config/dfs/: dfs_default.json
config/model/: tabpfn_v2.5_classification_default.json  tabpfn_v2_classification_default.json
devlogs/: 20260103_rdblearn_design.md  20260122_target_augmentation.md
examples/: fit_example_mocked_customized_ag.py  pipeline_example.py  rdblearn_4dbinfer_example.py  rdblearn_limix_example.py  rdblearn_relbench_example.py  rdblearn_relbench_reg_example.py
multitabfm/: __init__.py  api.py  core.py  evaluation.py  feature_engineer.py  model.py  utils.py
multitabfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
old_scripts/: test_autogluon.py  yaml_utils.py
rdblearn/: __init__.py  config.py  constants.py  datasets.py  estimator.py  preprocessing.py  utils.py
scripts/: launch_sweep_agents.sh  predownload_datasets.py  process_metadata.py  run_all_experiments.py  run_all_regression_experiments.py  run_sweep_experiment.py  setup_env.sh
scripts/skills/experiment-recording/: constants.py  experiment_recorder.py  sheets_client.py  wandb_client.py
tests/: test_evaluation.py  test_feature_engineer.py  test_preprocessing.py  test_rdblearn_datasets.py  test_rdblearn_estimator.py  test_regression.py  test_utils.py
